# nlp2sql

./: .copilot-instructions.md  .gitignore  CLAUDE.md  CLI_GUIDE.md  CONTRIBUTING.md  QUICK_START.md  README.md  USAGE.md  embeddings  pyproject.toml  test_odoo_analysis.py
.github/workflows/: ci.yml  publish-pypi.yml  publish-testpypi.yml
docker/: README.md  docker-compose.yml  init-schema.sql  localstack-init.sh  test-redshift.sh
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  ENTERPRISE.md  Redshift.md  comparison.md  enterprise-features.md  migration.md
examples/: README.md
examples/advanced/: test_multiple_providers.py  test_schema_filters.py  test_simple_api.py
examples/database_specific/: test_odoo_integration.py
examples/documentation/: real_world_example.py
examples/getting_started/: basic_usage.py  simple_demo.py  test_api_setup.py
examples/strands-fastapi-agent/: .dockerignore  .env.example  DOCKER_README.md  DOCKER_SETUP.md  DOCKER_TESTING_SUMMARY.md  Dockerfile  INDEX.md  README.md  docker-compose.yml  main.py  pyproject.toml  test-docker-endpoints.sh
examples/strands-fastapi-agent/docker/: init-ecommerce-schema.sql
mcp_server/: README.md  __init__.py  server.py
src/nlp2sql/: __init__.py  (+2 more)
tests/: conftest.py  test_artifact_loader.py  test_basic.py  test_batch_scoring.py  test_cli_semantic_support.py  test_client_hooks.py  test_column_validation.py  test_database_prompts.py  test_dsl_integration.py  test_embedding_manager.py  test_integration.py  test_postgres_integration.py  test_redshift_integration.py  test_retrieval_pipeline.py
(+62 files in other folders)
