[project]
name = "strands-fastapi-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "nlp2sql[embeddings-local]>=0.2.0rc5",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
    "strands-agents>=1.22.0",
    "uvicorn>=0.40.0",
]
